--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,13 +16,13 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag cr.yandex/${{ secrets.YC_REGISTRY_ID }}/users-service:latest
+      run: docker build . --file Dockerfile --tag cr.yandex/${{secrets.YC_REGISTRY_ID}/users-service:latest
       
     - name: Login to YC Registry
       uses: docker/login-action@v3.0.0 
       with:
         registry: cr.yandex
         username: json_key
-        password: ${{ secrets.YC_KEYS }}
+        password: ${{secrets.YC_KEYS}}
     - name: Push tag to YC Registry
-      run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/users-service:latest
+      run: docker push cr.yandex/${{secrets.YC_REGISTRY_ID}}/users-service:latest
