--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag cr.yandex/${{secrets.YC_REGISTRY_ID}/users-service:latest
+      run: docker build . --file Dockerfile --tag cr.yandex/${{secrets.YC_REGISTRY_ID}}/users-service:latest
       
     - name: Login to YC Registry
       uses: docker/login-action@v3.0.0 
