--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
   deploy:
       name: Deploy
       runs-on: ubuntu-latest
-      needs: [build-and-push-to-yc]
+      needs: [build]
       steps:
       - name: Deploy serverless container
         uses: yc-actions/yc-sls-container-deploy@v1
