--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+annotated-types==0.6.0
+anyio==3.7.1
 blinker==1.7.0
 click==8.1.7
+fastapi==0.105.0
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 psycopg2==2.9.9
+pydantic==2.5.2
+pydantic_core==2.14.5
+sniffio==1.3.0
 SQLAlchemy==2.0.23
+starlette==0.27.0
 typing_extensions==4.8.0
 Werkzeug==3.0.1
+uvicorn
