--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,22 @@ on:
 
 jobs:
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Prepare for tests
+        run: |
+          sudo apt update
+          sudo apt install -y python3-pip
+          pip install -r requirements.txt
+          docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/users-service:latest
+          docker run -p 80:80 -d ${{ secrets.DOCKER_USERNAME }}/users-service:latest
+          sleep 5
+      - name: Run tests
+        run: |
+          pytest component_tests.py
+
   build:
 
     runs-on: ubuntu-latest
