--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,8 +17,8 @@ jobs:
           sudo apt update
           sudo apt install -y python3-pip
           pip install -r requirements.txt
-          docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/users-service:latest
-          docker run -p 80:80 -d ${{ secrets.DOCKER_USERNAME }}/users-service:latest
+          docker build . --file Dockerfile --tag ${{secrets.YC_REGISTRY_ID}}/users-service:latest
+          docker run -p 80:80 -d ${{secrets.YC_REGISTRY_ID}}/users-service:latest
           sleep 5
       - name: Run tests
         run: |
